# PacificSynthesis

./: .gitignore  01_移植プラン.md  02_ビルド手順.md  03_DSP対応表.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.bk  COPYING.md  GIT_チートシート.md  README.md  ROADMAP.md  pluginval_run.txt  カセットジャケット配置仕様.md
Source/: FactoryPresets.h  Params.h  PatternState.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.h  WavExporter.h
Source/DSP/: BassVoice.h  DrumVoices.h  FxChain.h  Sequencer.h
Source/UI/: PacificColors.h  PacificLookAndFeel.h  StepGridComponent.h
docs/screenshots/: README.md
